# OpenCode-Teams-MCP

./: .gitignore  README.md  opencode.json  pyproject.toml
.github/workflows/: ci.yml
.opencode/: config.json
.opencode/agents/: researcher.md
.planning/: PROJECT.md  ROADMAP.md  STATE.md
.planning/phases/01-binary-discovery-model-configuration/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-agent-config-generation/: 02-01-SUMMARY.md  02-02-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-spawn-execution/: 03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-mcp-communication-validation/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-agent-health-monitoring/: 05-01-SUMMARY.md  05-VERIFICATION.md
.planning/phases/06-agent-templates/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-RESEARCH.md
.planning/phases/07-desktop-spawning/: 07-01-SUMMARY.md  07-02-SUMMARY.md  07-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/claude_teams/: config_gen.py  messaging.py  models.py  server.py  spawner.py  tasks.py  teams.py
src/opencode_teams/: __main__.py  config_gen.py  models.py  server.py  spawner.py  task_analysis.py  teams.py
tests/: test_config_gen.py  test_mcp_agent_tools.py  test_mcp_multi_agent.py  test_messaging.py  test_models.py  test_server.py  test_spawner.py  test_task_analysis.py  test_tasks.py  test_teams.py
(+4 files in other folders)
