[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opencode-teams"
version = "0.1.0"
description = "MCP server for orchestrating OpenCode agent teams with Kimi K2.5"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "fastmcp==3.0.0b1",
    "filelock>=3.16",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
opencode-teams = "opencode_teams.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/opencode_teams"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
